Update Question Design

--- a/QuizPlatform.Web/Views/Question/Index.cshtml
+++ b/QuizPlatform.Web/Views/Question/Index.cshtml
@@ -143,31 +143,35 @@
                                 </div>
                             }
 
-                            @if (question.Type == AnswerType.Choices)
-                            {
-                                @for (int i = 0; i < question.Options.Count; i++)
+                                @if (question.Type == AnswerType.Choices)
                                 {
-                                    var opt = question.Options[i];
-                                    var letter = (char)('A' + i);
-                                    <div class="mb-3">
-                                            <input type="hidden" name="Options[@i].Id" value="@opt.Id" />
+                                    <div class="row">
+                                        @for (int i = 0; i < question.Options.Count; i++)
+                                        {
+                                            var opt = question.Options[i];
+                                            var letter = (char)('A' + i);
+                                            <div class="col-md-6 mb-3">
+                                                <label class="form-label">Option @letter</label>
 
-                                        <label>Option @letter</label>
-                                        <input name="Options[@i].OptionText" value="@opt.OptionText" class="form-control" />
+                                                <input type="hidden" name="Options[@i].Id" value="@opt.Id" />
 
-                                        <div class="form-check mt-1">
-                                                <input type="radio"
-                                                       name="CorrectOptionIndex"
-                                                       value="@opt.Id"
-                                                @(opt.IsCorrect ? "checked" : "")
-                                                   class="form-check-input" />
-                                            <label class="form-check-label">Correct Answer</label>
-                                        </div>
+                                                <div class="input-group">
+                                                    <input name="Options[@i].OptionText" value="@opt.OptionText" class="form-control" />
+
+                                                    <span class="input-group-text">
+                                                        <input type="radio"
+                                                               name="CorrectOptionIndex"
+                                                               value="@opt.Id"
+                                                        @(opt.IsCorrect ? "checked" : "")
+                                                               class="form-check-input" />
+                                                        &nbsp; Correct
+                                                    </span>
+                                                </div>
+                                            </div>
+                                        }
                                     </div>
                                 }
 
-
-                            }
                         </div>
 
                         <div class="modal-footer">
