--- a/QuizPlatform.Web/Views/Question/Index.cshtml
+++ b/QuizPlatform.Web/Views/Question/Index.cshtml
@@ -10,7 +10,7 @@
 
     <!-- Title -->
     <div class="text-center mb-5">
-        <h2 class="fw-bold text-primary">Add Questions for Quiz #@quizId</h2>
+        <h2 class="fw-bold main-color">Add Questions for Quiz #@quizId</h2>
         <p class="text-muted mb-0">You can add text or multiple choice questions easily</p>
     </div>
 
@@ -124,7 +124,7 @@
                         <input type="hidden" name="Id" value="@question.Id" />
                         <input type="hidden" name="QuizId" value="@quizId" />
 
-                        <div class="modal-header">
+                        <div class="modal-header main-BackgroundColor text-white">
                             <h5 class="modal-title">Edit @question.Type Question</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                         </div>
