--- a/QuizPlatform.Web/Views/Question/Partials/_AddOptionsQuestionForm.cshtml
+++ b/QuizPlatform.Web/Views/Question/Partials/_AddOptionsQuestionForm.cshtml
@@ -3,7 +3,7 @@
 <form id="optionsForm" onsubmit="event.preventDefault();saveOptionsQuestion()">
     @Html.AntiForgeryToken()
 
-    <div class="modal-header text-light">
+    <div class="modal-header main-BackgroundColor text-white">
         <h5 class="modal-title" id="optionsQuestionModalLabel">Add Multiple Choice Question</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
     </div>
